# freeflux

./: .readthedocs.yaml  README.rst  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: _config.yml  building_model.ipynb  building_model.rst  conf.py  fba.ipynb  fba.rst  index.rst  inst_fitting.ipynb  inst_fitting.rst  inst_simulating.ipynb  inst_simulating.rst  installation.rst  mdv.ipynb  mdv.rst  quickstart.rst  ss_fitting.ipynb  ss_fitting.rst  ss_simulating.ipynb  ss_simulating.rst
models/ecoli/: fluxes.xlsx  measured_MDVs.xlsx  measured_fluxes.xlsx  reactions.xlsx
models/ecoli/experimental_data/: measured_MDVs.xlsx  measured_fluxes.xlsx  reactions.xlsx
models/ecoli/synthetic_data/: reactions.xlsx
models/synechocystis/: concentrations.xlsx  fluxes.xlsx  measured_fluxes.xlsx  measured_inst_MDVs.xlsx  reactions.xlsx
models/synechocystis/experimental_data/: measured_fluxes.xlsx  measured_inst_MDVs.xlsx  reactions.xlsx
models/synechocystis/synthetic_data/: concentrations.xlsx
models/toy/: concentrations.tsv  fluxes.tsv  measured_MDVs.tsv  measured_fluxes.tsv  measured_inst_MDVs.tsv  reactions.tsv
openopt_patch/: ooIter.py  result.py  runProbSolver.py
src/freeflux/: __init__.py
tutorials/: tutorial_ecoli_fba.py  tutorial_ecoli_steady_state_estimation.py  tutorial_ecoli_steady_state_estimation2.py  tutorial_ecoli_steady_state_simulation.py  tutorial_synechocystis_inst_estimation.py  tutorial_synechocystis_inst_estimation2.py  tutorial_synechocystis_inst_simulation.py  tutorial_toy_inst_estimation.py  tutorial_toy_steady_state_estimation.py
(+20 files in other folders)
