[metadata]
name = freeflux
version = 0.3.7
author = Chao Wu
author_email = chaowu09@gmail.com
description = FreeFlux is a package for 13C metabolic flux analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
    13c
    labeling pattern
    metabolic flux analysis
    metabolism
    biology
    non-linear programming
    optimization
    simulation
license = GNU General Public License v3.0
url = https://github.com/Chaowu88/freeflux
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
install_requires =
    numpy >= 1.20, < 1.23
    pandas ~= 1.0
    sympy ~= 1.6
    scipy >= 1.5, < 1.9
    pyomo >= 6.2, <= 6.5
    matplotlib >= 3.2, <= 3.7
    setuptools < 65
    pillow
    xlrd == 1.2.0
    openpyxl
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
